app/css/style.less
/* ... */
.btn-danger{
    background-color: @error-color;
    border-color: @error-dark-color;

    &:hover, &:focus, &:active, &.active {
        background-color: @error-dark-color;
        border-color: @error-dark-color;
    }
}

.btn-default {
    color: @main-text-color;

    &:focus{
        border-color: @border-color;
        color: @mid-text-color;
    }

    &:hover, &:active{
        color: @mid-text-color;
    }

    &.active {
        color: @mid-text-color;
    }
}

.btn-group {
    .btn{
        padding: 6px 12px;
    }
}

.btn-group-lg {
    > .btn {
        padding: 10px 20px;
        font-size: 18px;
        line-height: 1.33;
    }
}

.btn-lg {
    padding: 10px 20px;
    font-size: 18px;
    line-height: 1.33;

    .glyphicon {
        font-size: inherit;
    }
}

.btn-primary {
    background-color: @accent-bright;
    border-color: @accent-dark;

    &:hover, &:focus, &active {
        background-color: @accent-dark;
        border-color: @accent-dark;
    }

    &.active {
        background-color: @accent-dark;
        border-color: @accent-dark;
    }

    &.disabled, &[disabled], fieldset[disabled] {
        background-color: @accent-bright;
        border-color: @accent-dark;

        &:hover, &:focus, &:active, &.active {
            background-color: @accent-bright;
            border-color: @accent-dark;
        }
    }
}

.chart-options {
    > a {
        font-size: 16px;
        padding: 0;
        border: 0;
        color: @accent-bright;

        &.collapsed {
            color: @main-text-color;
        }

        &:hover {
            color: @accent-bright;
        }

        &:active, &.active {
            box-shadow: none;
        }
    }

    .btn-group{
        display: block;
    }

    .collapsing{
        position: absolute;
        display: block;
    }

    .glyphicon {
        font-size: inherit;
    }

    .popover{
        left: auto;
        right: 0px;
        top: 35px;
        margin-top: 0;

        background: none;
        padding: 10px;
        border: 0;
        border-radius: 0;
        box-shadow: none;

        > .arrow{
            left: auto;
            right: 20px;
            top: 0;
        }
    }

    .popover-content {
        background-color: @light-background;
        overflow: auto;
        padding: 15px 15px 0;
        border: @shadow-border;
        border-radius: 6px;
        box-shadow: 0 5px 10px @shadow;
    }

    span {
        &.header-text {
            /* Set the top position so the text aligns vertically with the gear icon. */
            position: relative;
            top: -1px;
            margin-right: 5px;
        }
    }
}

.col-xxl-1{
    @media (min-width: 1860px) {
        width: 8.33333333%;
    }
}

.col-xxl-2{
    @media (min-width: 1860px) {
        width: 16.66666667%;
    }
}

.col-xxl-3{
    @media (min-width: 1860px) {
        width: 25%;
    }
}

.col-xxl-4{
    @media (min-width: 1860px) {
        width: 33.33333333%;
    }
}

.col-xxl-5{
    @media (min-width: 1860px) {
        width: 41.66666667%;
    }
}

.col-xxl-6{
    @media (min-width: 1860px) {
        width: 50%;
    }
}

.col-xxl-7{
    @media (min-width: 1860px) {
        width: 58.33333333%;
    }
}

.col-xxl-8{
    @media (min-width: 1860px) {
        width: 66.66666667%;
    }
}

.col-xxl-9{
    @media (min-width: 1860px) {
        width: 75%;
    }
}

.col-xxl-10{
    @media (min-width: 1860px) {
        width: 83.33333333%;
    }
}

.col-xxl-11{
    @media (min-width: 1860px) {
        width: 91.66666667%;
    }
}

.col-xxl-12{
    @media (min-width: 1860px) {
        width: 100%;
    }
}

.collapsing {
    position: static;
}

.container {
    width: 100%;
    padding-left: 20px;
    padding-right: 20px;
}

.count{
    font-weight: bold;
    font-size: 22px;
    display: inline-block;
}

.count-group{
    display: inline-block;
    margin-right: 20px;
}

.count-large{
    font-size: 32px;
    bottom: -5px;
    display: inline-block;
    margin-right: 5px;
    position: relative;
}



.dropdown-menu {
    > .active {
        > a {
            background-color: @accent-bright;

            &:hover, &:focus {
                background-color: @accent-bright;
            }
        }
    }
}

.filter-reset {
    font-size: 14px;
    font-weight: bold;
    color: @main-text-color;
    background-color: @button-color;
    border-style: solid;
    border-width: 1px;
    border-color: @button-border-color;
    border-radius: 4px;
    margin-left: 5px;
    margin-top: 5px;
    margin-bottom: 5px;

    /* Add padding so the height of the filter label and glyphicon equals the height of the filter-container (30 px). */
    .filter-label {
        float: left;
        padding: 4px 8px;
        max-width: 90px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }

    .glyphicon {
        float: left;
        padding: 7px 8px;
        cursor: pointer;
        top: 0px;

        &.glyphicon-remove {
            color: @error-color;

            &:hover {
                background-color: @error-color;
                border-color: @error-dark-color;
                color: @light-text-color;
            }
        }
    }

    span {
        border-left: @border;

        &:first-child {
            border-left: none;
        }
    }
}

.footer-container {
    min-height: 20px;
    margin-top: 5px;

    span {
        &.footer-text {
            color: @main-text-color;
            font-size: 16px;
            font-weight: bold;
            line-height: 1.33;
            text-transform: uppercase;
        }
    }
}

.form-control {
    &:focus {
        border-color: @accent-bright;
        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(57, 181, 74, 0.4);
    }

    &.ng-invalid {
        &:focus {
            border-color: #FF0000;
            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 0, 0, 0.4);
        }
    }
}
/* ... */

